# ampliwrangler

./: LICENSE  README.md  environment.yml  meta.yml  pyproject.toml
ampliwrangler/: ampliwrangler.py  count.py  load.py  params.py  split.py  tabulate.py  utils.py
testing/: test-count.sh  test-split.sh  test-tabulate.sh
testing/count/outputs-expected/: min-sample-count.txt.md5  sample-counts.tsv  sample-counts.tsv.md5
testing/split/inputs/: manifest.tsv
testing/split/outputs-expected/: manifest_run-20210301.tsv  manifest_run-20210301.tsv.md5  manifest_run-20221011.tsv  manifest_run-20221011.tsv.md5  manifest_run-20230425.tsv  manifest_run-20230425.tsv.md5
testing/tabulate/inputs/: dna-sequences.qza  feature-table.qza  taxonomy.qza  taxonomy.tsv
testing/tabulate/outputs-expected/: 01_standard.tsv  01_standard.tsv.md5  02_renamed.tsv  02_renamed.tsv.md5  03_simple.tsv.md5  04_parsed.tsv.md5  06_qza.tsv  06_qza.tsv.md5
testing/tabulate/outputs_expected/: 03_simple.tsv  04_parsed.tsv
